--- a/app/globals.css
+++ b/app/globals.css
@@ -37,7 +37,7 @@
 
 @layer base {
   * {
-    @apply border-border;
+    @apply border-border scroll-smooth;
   }
   body {
     @apply bg-background text-foreground;
@@ -59,5 +59,37 @@
 
 .floating-navbar {
   @apply fixed top-0 left-0 right-0 z-50 backdrop-blur-md;
+}
+
+.custom-html-table table {
+  @apply max-w-[320px] overflow-y-scroll sm:max-w-[550px] md:max-w-[400px] lg:max-w-[550px] border;
+}
+.custom-html-table th,
+.custom-html-table td {
+  @apply p-2 text-left max-w-[120px] sm:max-w-[40px] md:max-w-[80px] lg:max-w-[250px] overflow-y-scroll;
+}
+
+.custom-html-desc-table {
+  @apply overflow-y-scroll lg:max-w-[550px];
+}
+
+.custom-html-desc-table th,
+.custom-html-desc-table td {
+  @apply p-2 text-left max-lg:max-w-[210px] overflow-y-scroll;
+}
+
+.custom-blog-table {
+  @apply my-4 overflow-y-scroll ;
+}
+.custom-blog-table th,
+.custom-blog-table td {
+  @apply p-4 my-4 text-left max-lg:max-w-[210px] overflow-y-scroll border-2 border-primary;
+}
+
+.custom-blog-table td {
+  @apply font-medium
+}
+.custom-strong-tag {
+ @apply my-4
 }
 
